# corruption

./: .gitignore  .gitmodules  CMakeLists.txt
.github/workflows/: cmake.yml
Source/: Game.cpp  Game.hpp  Initialize.cpp  Initialize.hpp  main.cpp
Source/Assets/Shaders/: sprite.fsh  varying.def.sc
Source/Engine/: AnimatedSprite.cpp  AnimatedSprite.hpp  Asset.hpp  Render.cpp  Render.hpp  Shader.cpp  Shader.hpp  Sprite.cpp  Sprite.hpp  Texture.cpp  Texture.hpp
Source/Player/: PlayerSprite.cpp  PlayerSprite.hpp
